Added exta message as response for add() endpoint and refactored
